# system-info-app

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.claude/agents/: macos-swift-rust-expert.md  windows-cpp-expert.md
.github/workflows/: release.yml
cpp_cross_platform/: CMakeLists.txt
cpp_cross_platform/include/: systemapi.h
cpp_cross_platform/src/: systemapi.cpp
docs/: apple-signing-checklist.md
scripts/: README.md  build-macos.sh  build-windows.ps1  clean.ps1  clean.sh
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs
